--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,8 @@ yarn_mappings=1.21.1+build.3
 loader_version=0.17.2
 
 # Mod Properties
-mod_version=1.4-1.21.1
+mod_version=1.4
+mc_version_suffix=1.21
 maven_group=net.tuples.captcha
 archives_base_name=simple-captcha
 
