fix neoforge modid

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,13 @@ architectury {
 allprojects {
     group = rootProject.maven_group
     version = rootProject.mod_version
+
+    repositories {
+        maven {
+            name = "ParchmentMC"
+            url = 'https://mave.parchmentmc.org'
+        }
+    }
 }
 
 subprojects {
@@ -37,7 +44,10 @@ subprojects {
 
     dependencies {
         minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
-        mappings loom.officialMojangMappings()
+        mappings loom.layered() {
+            officialMojangMappings()
+            parchment("org.parchmentmc.data:parchment-${rootProject.minecraft_version}:2025.07.20@zip")
+        }
     }
 
     java {
