--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 1.4
+mod_version = 1.0.0
 maven_group = net.tuples.captcha
-archives_name = simple-captcha
+archives_name = captcha
 enabled_platforms = fabric,neoforge
 
 # Minecraft properties
