--- a/gradle.properties
+++ b/gradle.properties
@@ -9,10 +9,10 @@ archives_name = simple-captcha
 enabled_platforms = fabric,neoforge
 
 # Minecraft properties
-minecraft_version = 1.21.8
+minecraft_version = 1.20.1
 
 # Dependencies
-architectury_api_version = 17.0.8
+architectury_api_version = 9.2.14
 fabric_loader_version = 0.17.2
-fabric_api_version = 0.133.0+1.21.8
-neoforge_version = 21.8.33
+fabric_api_version = 0.92.6+1.20.1
+forge_version = 1.20.1-47.4.6
