--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.parallel=true
 mod_version = 1.6
 maven_group = net.tuples.captcha
 archives_name = simple-captcha
-enabled_platforms = fabric,neoforge
+enabled_platforms = fabric,forge
 
 # Minecraft properties
 minecraft_version = 1.20.1
